[project]
name = "travel-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "fastapi-users[oauth,sqlalchemy]==13.0.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite==0.21.0",
    "sqlalchemy==2.0.23",
    "python-jose[cryptography]==3.3.0",
    "requests==2.31.0",
    "python-multipart==0.0.9",
    "httpx==0.25.2",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    "email-validator==2.1.0",
    "fastapi-mail==1.4.1",
    ]